<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.practise.lizhiguang.practise.MainActivity"
    android:longClickable="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/loading"
        android:id="@+id/button_loading"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/audio"
        android:id="@+id/button_audio"
        android:layout_below="@id/button_loading"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/handle"
        android:id="@+id/button_handle"
        android:layout_below="@id/button_audio" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/coordinator"
        android:id="@+id/button_coordinator"
        android:layout_below="@id/button_handle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/viewpager"
        android:id="@+id/button_viewpager"
        android:layout_below="@id/button_coordinator"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/recycleview"
        android:id="@+id/button_recycle"
        android:layout_below="@id/button_viewpager"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/fragment"
        android:id="@+id/button_fragment"
        android:layout_below="@id/button_recycle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/service"
        android:id="@+id/button_front_service"
        android:layout_below="@id/button_fragment"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/float_menu"
        android:id="@+id/button_float_menu"
        android:layout_below="@id/button_front_service"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/widget"
        android:id="@+id/button_widget"
        android:layout_below="@id/button_float_menu"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/download"
        android:id="@+id/button_download"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button_loading" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="黑白快"
        android:id="@+id/button_black_and_write"
        android:layout_below="@+id/button_download"
        android:layout_toEndOf="@+id/button_audio" />
</RelativeLayout>
